# simpson

./: CMakeLists.txt  README.md  complx.h
cmake/: FindFFTW3.cmake  FindNFFT.cmake
